weston.ini: disable top panel
Change-Id: Id103186b91459ac6215413f28731955f9b7d03a3
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/weston.ini
+++ b/weston.ini
@@ -8,6 +8,7 @@ background-color=0xff002244
 background-type=scale-crop
 panel-color=0x95333333
 locking=true
+panel=false
 animation=zoom
 #binding-modifier=ctrl
 num-workspaces=4
