start tz-launcher (user minishell) at session startup
Change-Id: I5230f72ba59f628e296495aabc71283d304579f9
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/weston-user.service
+++ b/weston-user.service
@@ -2,7 +2,8 @@
 Description=Shared weston session
 
 [Service]
-ExecStart=/usr/bin/ln -s /run/display/wayland-0 /run/user/%U/
+ExecStartPre=/usr/bin/ln -s /run/display/wayland-0 /run/user/%U/
+ExecStart=/usr/bin/tz-launcher /usr/share/applications/weston-terminal.desktop
 
 [Install]
 WantedBy=default.target
