fix tz-launcher startup
Change-Id: Iff3786b143eddab1e31b0b339e92acba074ecf7e
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/weston-user.service
+++ b/weston-user.service
@@ -2,8 +2,8 @@
 Description=Shared weston session
 
 [Service]
-ExecStartPre=/usr/bin/ln -s /run/display/wayland-0 /run/user/%U/
-ExecStart=/usr/bin/tz-launcher /usr/share/applications/weston-terminal.desktop
+ExecStartPre=/usr/bin/ln -sf /run/display/wayland-0 /run/user/%U/
+ExecStart=/usr/bin/tz-launcher -c /usr/share/applications/tizen/launcher.conf %h/.applications/tizen
 
 [Install]
 WantedBy=default.target
