change path of user desktop files
Change-Id: I25668b6a306a2f8f01df99f8748733494183ac08
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/weston-user.service
+++ b/weston-user.service
@@ -3,7 +3,7 @@ Description=Shared weston session
 
 [Service]
 ExecStartPre=/usr/bin/ln -sf /run/display/wayland-0 /run/user/%U/
-ExecStart=/usr/bin/tz-launcher -c /usr/share/applications/tizen/launcher.conf %h/.applications/tizen
+ExecStart=/usr/bin/tz-launcher -c /usr/share/applications/tizen/launcher.conf %h/.applications/desktop
 
 [Install]
 WantedBy=default.target
