fix tz-launcher environment for EFL
Change-Id: If325358a627c7f9cb1108d92ff0ac7034d79ef16
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/display-manager.service
+++ b/display-manager.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Display manager setup service
+Requires=display-manager-run.service
+After=display-manager-run.service
 
 [Service]
 ExecStart=/usr/bin/chmod g+w /run/display/wayland-0
