start weston without weston-launch
this requires the appropriate permissions on:
- /dev/dri/*
- /dev/input/event*
- /dev/tty*

Now weston also starts on tty7 and produces a
log in /run/display/weston.log

Change-Id: Ibff542df306a0b556e54e3b26654306fd55595cd
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/display-manager-run.service
+++ b/display-manager-run.service
@@ -2,9 +2,15 @@
 Description=Weston display daemon
 
 [Service]
-ExecStart=/usr/bin/weston-launch -u display -- -i0
-TTYPath=/dev/tty1
+User=display
+ExecStart=/usr/bin/weston -i0 --log=%h/weston.log
+StandardInput=tty
+TTYPath=/dev/tty7
 EnvironmentFile=/etc/sysconfig/weston
+
+#adding the capability to configure ttys
+#may be needed if the user 'display' doesn't own the tty
+#CapabilityBoundingSet=CAP_SYS_TTY_CONFIG 
 
 [Install]
 WantedBy=graphical.target
