fix smack permissions
Change-Id: Ifc47f4f7b7ab0f91ca1a9fdae25cb350f67a5329
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/display-manager.service
+++ b/display-manager.service
@@ -4,7 +4,9 @@ Requires=display-manager-run.service
 After=display-manager-run.service
 
 [Service]
+Type=oneshot
 ExecStart=/usr/bin/chmod g+w /run/display/wayland-0
+ExecStart=/usr/bin/chsmack -a User /run/display/wayland-0
 
 [Install]
 WantedBy=graphical.target
