change background in weston.ini
Change-Id: Ia338953bc194eb46a79115850a5a5d6f450aed9b
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/weston.ini
+++ b/weston.ini
@@ -2,8 +2,7 @@
 modules=desktop-shell.so
 
 [shell]
-#background-image=/usr/share/backgrounds/gnome/Aqua.jpg
-background-image=/usr/share/backgrounds/tizen/golfe-morbihan.jpg	
+background-image=/usr/share/backgrounds/tizen/current
 background-color=0xff002244
 background-type=scale-crop
 panel-color=0x95333333
