display: use fbdev backend if no drm available
Used as fallback for machines without GPU support (ie: ARM).

Change-Id: I406e9628a9597736086881385cb5fea1d29dcc4c
Signed-off-by: Philippe Coval <philippe.coval@open.eurogiciel.org>

--- a/display-manager-run.service
+++ b/display-manager-run.service
@@ -4,7 +4,7 @@ Description=Weston display daemon
 [Service]
 User=display
 WorkingDirectory=/run/%u
-ExecStart=/usr/bin/weston -i0 --log=%h/weston.log
+ExecStart=/bin/sh -c 'backend=drm ; [ -d /dev/dri ] || backend=fbdev ; exec /usr/bin/weston --backend=$backend-backend.so -i0 --log=%h/weston.log'
 StandardInput=tty
 TTYPath=/dev/tty7
 EnvironmentFile=/etc/sysconfig/weston
