--- a/display-manager-run.service
+++ b/display-manager-run.service
@@ -8,6 +8,8 @@ ExecStart=/bin/sh -c 'backend=drm ; [ -d /dev/dri ] || backend=fbdev ; exec /usr
 StandardInput=tty
 TTYPath=/dev/tty7
 EnvironmentFile=/etc/sysconfig/weston
+Restart=on-failure
+RestartSec=10
 
 #adding the capability to configure ttys
 #may be needed if the user 'display' doesn't own the tty
