weston.ini: adapt to Weston 1.6.0
The "panel=false" option now exists upstream as
"panel_location=none".

Change-Id: I7f082051be49e3d7c4afbdc9d6f26588e23fdc51
Signed-off-by: Manuel Bachmann <manuel.bachmann@open.eurogiciel.org>

--- a/weston.ini
+++ b/weston.ini
@@ -7,7 +7,7 @@ background-color=0xff002244
 background-type=scale-crop
 panel-color=0x95333333
 locking=true
-panel=false
+panel-location=none
 animation=zoom
 #binding-modifier=ctrl
 num-workspaces=4
