Fix weston startup with systemd 212
- %h placeholder *MUST NOT* be used in systemd(system) service files, starting from upstream commit 2cfbd749
- SMACK="<label>" *MUST* be changed to SECLABEL{smack}="<label>" in /etc/udev/rules.d/*

Change-Id: I8f59f73f6d7b4ee6fa4faa7d6978135de326a327
Bug-Tizen: TC-660
Signed-off-by: Stephane Desneux <stephane.desneux@open.eurogiciel.org>

--- a/display-manager-run.service
+++ b/display-manager-run.service
@@ -4,7 +4,8 @@ Description=Weston display daemon
 [Service]
 User=display
 WorkingDirectory=/run/%u
-ExecStart=/bin/sh -c 'backend=drm ; [ -d /dev/dri ] || backend=fbdev ; exec /usr/bin/weston --backend=$backend-backend.so -i0 --log=%h/weston.log'
+# FIXME: log files shouldn't be stored in tmpfs directories (can get quite big and have side effects)
+ExecStart=/bin/sh -c 'backend=drm ; [ -d /dev/dri ] || backend=fbdev ; exec /usr/bin/weston --backend=$backend-backend.so -i0 --log=/run/%u/weston.log'
 StandardInput=tty
 TTYPath=/dev/tty7
 EnvironmentFile=/etc/sysconfig/weston
