service: restart on failure
Change-Id: Ie4696137ab66d73cb890910f15afaba4452e651e
Signed-off-by: Philippe Coval <philippe.coval@open.eurogiciel.org>

--- a/display-manager-run.service
+++ b/display-manager-run.service
@@ -8,6 +8,7 @@ ExecStart=/bin/sh -c 'backend=drm ; [ -d /dev/dri ] || backend=fbdev ; exec /usr
 StandardInput=tty
 TTYPath=/dev/tty7
 EnvironmentFile=/etc/sysconfig/weston
+Restart=on-failure
 
 #adding the capability to configure ttys
 #may be needed if the user 'display' doesn't own the tty
