Add a QA client and plugin
We add a new "qa-plugin" package, which contains a Weston
plugin (disabled by default) and a client named "weston-
qa-client".

Currently, if the plugin is enabled in "weston.ini", the
client will retrieve a list of the currently displayed
surfaces along with their positions and sizes.

Change-Id: I881131f1985ef527dfd45e27a66edd5fce2d55c8
Signed-off-by: Manuel Bachmann <manuel.bachmann@open.eurogiciel.org>

--- a/weston.ini
+++ b/weston.ini
@@ -1,5 +1,6 @@
 [core]
 modules=desktop-shell.so
+#modules=desktop-shell.so,qa-plugin.so
 
 [shell]
 background-image=/usr/share/backgrounds/tizen/current
